<resources>
    <string name="app_name">SharingServiceApp</string>
    <string name="reg_title">Sukurti paskyrą</string>
    <string name="reg_welcome">Sveiki atvykę į NestHelper!</string>
    <string name="reg_info_create">Čia pagalba – vos kelių paspaudimų atstumu. Prisijunkite, dalinkitės ir gaukite reikiamas paslaugas!</string>
    <string name="user_entry">Vartotojo vardas</string>
    <string name="first_name_entry">Vardas</string>
    <string name="surname_entry">Pavardė</string>
    <string name="date_of_birth">Gimimo data</string>
    <string name="email_entry">El. paštas</string>
    <string name="psw_entry">Slaptažodis</string>
    <string name="continue_btn">Tęsti</string>
    <string name="reg_terms">Tęsdami sutinkate su NestHelper taisyklėmis ir privatumo politika. Galite ištrinti savo paskyrą nustatymuose.</string>
    <string name="reg_btn">Registracija</string>
    <string name="reg_error_empty_name">Būtina įvesti vardą</string>
    <string name="reg_error_empty_surname">Būtina įvesti pavardę</string>
    <string name="reg_error_empty_email">Būtina įvesti el. paštą</string>
    <string name="reg_error_empty_psw">Būtina įvesti slaptažodį</string>
    <string name="reg_error_bad_psw">Slaptažodis turi būti bent 8 simbolių, turėti 1 didžiąją raidę, 1 skaičių ir 1 simbolį</string>
    <string name="reg_error_empty_date_of_birth">Būtina įvesti gimimo datą</string>
    <string name="reg_error_smallest_year_old_date_of_birth">Turite būti ne jaunesnis nei 16 metų</string>
    <string name="reg_error_fill_error">Prašome teisingai užpildyti visus laukus</string>
    <string name="reg_failed_register">Registracija nepavyko. Bandykite dar kartą vėliau...</string>
    <string name="welcome_title">Sveiki atvykę į NestHelper!</string>
    <string name="welcome_intro">Susikurkite paskyrą ir pradėkite teikti arba gauti paslaugas vos keliais paspaudimais!</string>
    <string name="creatacc_btn">Sukurti paskyrą</string>
    <string name="con_w_google_btn">Tęsti su Google</string>
    <string name="reg_info_have_acc">Jau turite paskyrą?</string>
    <string name="login_btn">Prisijungti</string>
    <string name="login_logo">Prisijungimas</string>
    <string name="login_psw_forget">Pamiršote slaptažodį? - Atkurti slaptažodį</string>
    <string name="login_btn_login">Prisijungti</string>
    <string name="login_error_empty_email">Įveskite el. pašto adresą</string>
    <string name="login_error_empty_password">Įveskite slaptažodį</string>
    <string name="login_error_format_email">Neteisingas el. pašto adresas</string>
    <string name="login_error_wrong_email">Patikrinkite el. pašto adresą</string>
    <string name="login_error_wrong_password">Patikrinkite slaptažodį</string>
    <string name="login_error_toast_check_fields">Nepavyko prisijungti. Patikrinkite įvestus duomenis</string>
    <string name="reset_psw_logo">Slaptažodžio atstatymas</string>
    <string name="reset_psw_info">Įveskite savo el. pašto adresą, kad gautumėte gauti laptažodžio atstatymo nuorodą</string>
    <string name="home">Pagrindinis</string>
    <string name="planned_tasks">Suplanuota</string>
    <string name="messages">Žinutės</string>
    <string name="more">Daugiau</string>
    <string name="app_title">NestHelper</string>
    <string name="failed_load_categories">Nepavyko užkrauti paslaugų</string>
    <string name="messages_title">Žinutės</string>
    <string name="failed_load_messages">Nepavyko užkrauti žinučių</string>
    <string name="message_your_last_message_mark">Jūs:</string>
    <string name="error_user_auth">Vartotojas neprisijungęs</string>
    <string name="error_invalid_taskId">Neteisingas užduoties ID</string>
    <string name="error_invalid_userID">Vartotojo ID nerastas</string>
    <string name="error_invalid_chatID">Neteisingas pokalbio ID</string>
    <string name="error_invalid_receiverID">Neteisingas gavėjo ID</string>
    <string name="error_invalid_taskerID">Neteisingas paslaugų teikėjo ID</string>
    <string name="error_invalid_categoryID">Neteisinga kategorijos ID</string>
    <string name="more_title">Meniu</string>
    <string name="btn_saved">Išsaugota</string>
    <string name="btn_tasker_prof">Paslaugų teikėjo paskyra</string>
    <string name="btn_requests_offers">Užklausos / Pasiūlymai</string>
    <string name="btn_create_task">Sukurti užduotį</string>
    <string name="btn_history">Istorija</string>
    <string name="btn_balance">Mokėjimai ir piniginė</string>
    <string name="btn_support">Pagalba</string>
    <string name="support_title">Pagalba</string>
    <string name="type_select_issue">Pasirinkite problemos tipą</string>
    <string name="type_payment">Mokėjimas</string>
    <string name="type_fraud">Sukčiavimas</string>
    <string name="type_task">Užklausa</string>
    <string name="type_open_task">Atvira užklausa</string>
    <string name="type_account">Paskyra</string>
    <string name="type_other">Kita</string>
    <string name="error_type_issue">Prašome pasirinkti problemos tipą</string>
    <string name="support_description_details">Aprašykite savo problemą...</string>
    <string name="error_support_description">Aprašymas negali būti tuščias</string>
    <string name="support_message_successful">Pagalbos užklausa išsiųsta</string>
    <string name="btn_send">Siųsti</string>
    <string name="btn_confirm_support">Patvirtinti</string>
    <string name="support_ticket_text">Ačiū! Susisieksime su jumis el. paštu</string>
    <string name="balance_title">Mokėjimai ir piniginė</string>
    <string name="payments_header">Mokėjimų istorija</string>
    <string name="payments_error_fetch">Klaida gaunant duomenis</string>
    <string name="payments_payout_title">Įveskite norima išmokamos sumą</string>
    <string name="payments_payout_error_empty">Prašome įvesti sumą</string>
    <string name="payments_payout_error_amount">Prašome įvesti teigiamą skaičių</string>
    <string name="payments_payout_request_sent">Išmokos prašymas išsiųstas!</string>
    <string name="payments_payout_request_network_error">Tinklo klaida</string>
    <string name="payments_payout_request_accepted">Išmokos užklausa priimta</string>
    <string name="payments_payout_request_accepted_text">Jūsų išmokos užklausa bus peržiūrėta, o išmoka pervesta į jūsų banko sąskaitą per 2 darbo dienas.</string>
    <string name="payments_payout_request_try_title">IBAN nėra pridėtas!</string>
    <string name="payments_payout_request_try_text">Jūsų paskyroje nėra pridėto banko sąskaitos numerio, todėl negalite atlikti išmokos.</string>
    <string name="history_title">Istorija</string>
    <string name="history_my_tasks">Mano užklausos</string>
    <string name="history_failed_to_load">Nepavyko užkrauti užduočių</string>
    <string name="history_people_tasks">Klientų užklausos</string>
    <string name="history_detailed_my_tasks_title">Užduotis</string>
    <string name="history_detailed_my_tasks_tasker_header">Paslaugų teikėjas</string>
    <string name="history_detailed_my_tasks_task_details_header">Užduoties informacija</string>
    <string name="history_detailed_my_tasks_task_description_header">Aprašymas</string>
    <string name="history_detailed_my_tasks_task_gallery_header">Užduoties nuotraukos</string>
    <string name="history_detailed_my_tasks_error_load">Nepavyko užkrauti užduoties</string>
    <string name="history_detailed_my_tasks_send_review">Parašyti Atsiliepimą</string>
    <string name="review_title">Įvertinkite savo patirtį</string>
    <string name="review_hint">Parašykite savo atsiliepimą...</string>
    <string name="review_btn_submit">Pateikti Atsiliepimą</string>
    <string name="review_successful_submit">Atsiliepimas pateiktas!</string>
    <string name="review_error_empty_content">Šis laukas negali būti tuščias</string>
    <string name="history_detailed_task_request_title">Užduotis</string>
    <string name="history_detailed_task_request_customer_header">Klientas</string>
    <string name="history_detailed_request_customer_task_details_header">Užduoties informacija</string>
    <string name="history_detailed_request_customer_description_header">Aprašymas</string>
    <string name="history_detailed_request_customer_gallery_header">Užduoties nuotraukos</string>
    <string name="status_pending">Pending</string>
    <string name="status_waiting_for_payment">Waiting for Payment</string>
    <string name="status_declined">Declined</string>
    <string name="status_canceled">Canceled</string>
    <string name="status_paid">Paid</string>
    <string name="request_offer_title">Užklausos</string>
    <string name="request_offer_my_tasks">Mano užklausos</string>
    <string name="request_offer_people_request">Klientų užklausos</string>
    <string name="request_offer_failed_load_categories">Nepavyko įkelti kategorijų</string>
    <string name="request_offer_failed_load_cities">Nepavyko įkelti miestų</string>
    <string name="request_offer_failed_load_tasks">Nepavyko įkelti užduočių</string>
    <string name="request_offer_failed_load_requests">Nepavyko įkelti užklausų</string>
    <string name="request_offer_filter_title">Filtrai</string>
    <string name="request_offer_filter_category_header">Paslaugos</string>
    <string name="request_offer_filter_city_header">Miestai</string>
    <string name="request_offer_filter_date_header">Data</string>
    <string name="request_offer_filter_status_header">Būsena</string>
    <string name="request_offer_filter_btn_apply">Taikyti Filtrus</string>
    <string name="request_offer_open_task_title">Atvira užklausa</string>
    <string name="request_offer_open_task_failed_load_offers">Nepavyko užkrauti pasiūlymų</string>
    <string name="request_offer_open_task_offers_dialog_title">Pasiūlymai</string>
    <string name="request_offer_open_task_offers_dialog_close">Uždaryti</string>
    <string name="request_offer_open_task_offers_accepted">Pasiūlymas priimtas</string>
    <string name="request_offer_open_task_create_title">Atvira užklausa</string>
    <string name="request_offer_open_task_create_budget_header">Biudžetas (€)</string>
    <string name="request_offer_open_task_create_budget_hint">Įveskite savo biudžetą</string>
    <string name="request_offer_open_task_create_day_time_header">Dienos ir laikai</string>
    <string name="request_offer_open_task_create_day_time_btn">Pasirinkti dienas ir laiką</string>
    <string name="request_offer_open_task_create_btn_create">Sukurti kaip atvirą užklausą</string>
    <string name="create_my_tasker_error_text">Šis laukas yra privalomas ir negali būti tuščias</string>
    <string name="create_my_tasker_error_text_hourly_rate">Šis laukas yra privalomas ir turi būti įvestas teigiamas skaičius</string>
    <string name="edit_my_tasker_profile_title">Redaguoti paskyrą</string>
    <string name="edit_my_tasker_profile_btn_upload_profile_photo">Įkelti nuotrauką</string>
    <string name="edit_my_tasker_profile_description_header">Aprašymas</string>
    <string name="edit_my_tasker_profile_description_text">Aprašykite savo įgūdžius, privalumus...</string>
    <string name="edit_my_tasker_profile_gallery_header">Galerija</string>
    <string name="edit_my_tasker_profile_gallery_btn">Pridėti nuotraukas</string>
    <string name="edit_my_tasker_profile_categories_header">Paslaugos</string>
    <string name="edit_my_tasker_profile_categories_text">Pasirinkite paslaugas</string>
    <string name="edit_my_tasker_profile_hourly_rate_header">Valandinis įkainis</string>
    <string name="edit_my_tasker_profile_hourly_rate_text">Įveskite įkainį</string>
    <string name="edit_my_tasker_profile_cities_header">Miestai</string>
    <string name="edit_my_tasker_profile_cities_text">Pasirinkite miestus</string>
    <string name="edit_my_tasker_profile_availability_header">Darbo laikas</string>
    <string name="edit_my_tasker_profile_availability_btn">Pasirinkti laiką</string>
    <string name="edit_my_tasker_profile_btn_save">Išsaugoti</string>
</resources>