<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <item
            android:id="@+id/menu_home"
            android:title="@string/home"
            android:icon="@drawable/home"
            />

        <item
            android:id="@+id/menu_tasks"
            android:title="@string/planned_tasks"
            android:icon="@drawable/ic_calendar"
            />

        <item
            android:id="@+id/menu_messages"
            android:title="@string/messages"
            android:icon="@drawable/messeges"
            />

        <item
            android:id="@+id/menu_more"
            android:title="@string/more"
            android:icon="@drawable/menu"
            />
    </menu>
