<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/chevron_arrow_left"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_my_tasker_profile_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">

            <ImageView
                android:id="@+id/img_profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/user"
                android:scaleType="centerCrop"
                android:background="@drawable/rounded_image"/>

            <Button
                android:id="@+id/btn_upload_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_my_tasker_profile_btn_upload_profile_photo"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:text="@string/edit_my_tasker_profile_description_header"/>

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/edit_my_tasker_profile_description_text"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="16sp"
                android:gravity="top|start"
                android:inputType="textMultiLine"/>

            <TextView
                android:id="@+id/error_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginTop="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:text="@string/create_my_tasker_error_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_my_tasker_profile_gallery_header"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:padding="4dp">

                <LinearLayout
                    android:id="@+id/gallery_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <Button
                android:id="@+id/btn_add_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/edit_my_tasker_profile_gallery_btn"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_my_tasker_profile_categories_header"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tv_selected_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_my_tasker_profile_categories_text"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="16sp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/rounded_edittext"/>

            <TextView
                android:id="@+id/error_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginTop="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:text="@string/create_my_tasker_error_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_my_tasker_profile_hourly_rate_header"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/edit_hourly_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_my_tasker_profile_hourly_rate_text"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="16sp"
                android:inputType="numberDecimal"
                android:background="@drawable/rounded_edittext"/>

            <TextView
                android:id="@+id/error_hourly_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginTop="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:text="@string/create_my_tasker_error_text_hourly_rate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_my_tasker_profile_cities_header"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tv_selected_cities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_my_tasker_profile_cities_text"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="16sp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/rounded_edittext"/>

            <TextView
                android:id="@+id/error_cities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginTop="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:text="@string/create_my_tasker_error_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_my_tasker_profile_availability_header"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>
            <Button
                android:id="@+id/btn_select_days_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/edit_my_tasker_profile_availability_btn"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_submit_tasker_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_my_tasker_profile_btn_save"
        android:layout_marginTop="8dp"/>
</LinearLayout>
