<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.MainActivity">

    <Button
        android:id="@+id/btn_con_email"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_btn_black"
        android:text="@string/creatacc_btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/btn_con_google"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_con_google"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="184dp"
        android:layout_height="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/reg_info_have_acc"
        android:textColor="@color/blacktxt"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_con_google" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_btn_black"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="326dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:text="@string/welcome_title"
        android:textAlignment="center"
        android:textColor="@color/blacktxt"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="340dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_intro"
        android:textAlignment="center"
        android:textColor="@color/blacktxt"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_con_email"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="@+id/btn_con_email"
        app:layout_constraintTop_toBottomOf="@+id/welcome_title" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="298dp"
        android:layout_height="171dp"
        android:layout_marginTop="52dp"
        android:background="@color/clear"

        app:layout_constraintEnd_toEndOf="@+id/welcome_title"
        app:layout_constraintStart_toStartOf="@+id/welcome_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main" />

    <LinearLayout
        android:id="@+id/btn_con_google"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn_grey"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btn_con_email">

        <ImageView
            android:layout_width="31dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:src="@drawable/google_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/con_w_google_btn"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>